Closes #5: add task-group-inspector to pages on which extension's allowed to run

--- a/manifest.json
+++ b/manifest.json
@@ -7,7 +7,7 @@
 
   "content_scripts": [
     {
-      "matches": ["*://tools.taskcluster.net/groups/*"],
+      "matches": ["*://tools.taskcluster.net/groups/*", "*://tools.taskcluster.net/task-group-inspector/*"],
       "js": ["stats.js"]
     }
   ],
